#--------------------------------------------------------------------------
# File and Version Information:
#  $Id$
#
# Description:
#  ChangeLog file for package psddl
#------------------------------------------------------------------------

Package author: Andy Salnikov

Please describe any modifications that you made to the package in the
reverse time order.

Tag: V00-11-00
2013-11-02 Andy Salnikov
- small scale refactoring of backends:
- all constructors now take the same set of arguments, so there is no 
  need for specialized factories
- all backends define static methods backendOptions() which returns the 
  list of backend-specific options
- 'psddlc -B help' will print the list of options for each backend

Tag: V00-10-00
2013-10-31 Andy Salnikov
- hdf5 generator: replace explicit chunk size argument with chunk
  size policy objects

Tag: V00-09-02
2013-10-24 Andy Salnikov
- hdf5 generator: add code to create _schemaVersion attribute

Tag: V00-09-01
2013-10-08 Andy Salnikov
- hdf5 generator: store_at() method accepts pointer instead of reference

Tag: V00-09-00
2013-10-08 Andy Salnikov
- hdf5 generator: replace generated append() method with store_at() which
  takes additional index argument
- add support for "default" tag in schema definition

Tag: V00-08-18
2013-09-24 Andy Salnikov
- fix _sizeof() generation for BldDataAcqADCV1

Tag: V00-08-17
2013-09-24 Andy Salnikov
- add stream insertion operator for enums defined outside classes

Tag: V00-08-16
2013-09-24 Andy Salnikov
- add #include <cstring> to psana headers

Tag: V00-08-15
2013-09-24 Andy Salnikov
- small improvements to code generation, helps with most recent addition
  of BldDataAcqADCV1 to DDL
- this does not touch anything in pdsdata backend

Tag: V00-08-14
2013-09-18 Andy Salnikov
- allow constructor arguments with dest=none, implementation of a constructor
  should be provided separately

Tag: V00-08-13
2013-09-18 Andy Salnikov
- allow generation of _sizeof() for few additional types
